Adjust font size, fixed spacing under h1, topper letter spacing

--- a/src/css/local.css
+++ b/src/css/local.css
@@ -67,7 +67,7 @@
   #sbs .cs-topper {
     font-size: var(--topperFontSize);
     font-family: "Merriweather-Sans";
-    line-height: 1em;
+    line-height: 1.2em;
     text-transform: uppercase;
     text-align: left;
     letter-spacing: .1em;
@@ -92,7 +92,7 @@
     text-align: left;
     width: 100%;
     max-width: 46.875rem;
-    margin: 0 auto;
+    margin: 0 auto 1rem;
     color: var(--bodyTextColor);
     text-decoration: none;
   }
@@ -271,11 +271,12 @@
   #sbs-r .cs-topper {
     font-size: var(--topperFontSize);
     font-family: "Merriweather-Sans";
-    line-height: 1em;
+    line-height: 1.2em;
     text-transform: uppercase;
     text-align: left;
     letter-spacing: .1em;
     font-weight: 500;
+    margin-bottom: clamp(0.5rem, 1.4vw, 0.75rem);
     color: var(--primary);
     display: block;
   }
@@ -285,7 +286,7 @@
     line-height: 1.2em;
     text-align: left;
     max-width: 50rem;
-    margin: .8rem auto .8rem;
+    margin: 0 auto .5rem;
     color: var(--headerColor);
     position: relative;
   }
@@ -415,10 +416,10 @@
   #reviews .cs-topper {
     font-size: var(--topperFontSize);
     font-family: "Merriweather-Sans";
-    line-height: 1.5em;
+    line-height: 1.2em;
     text-transform: uppercase;
     text-align: center;
-    letter-spacing: .05em;
+    letter-spacing: .1em;
     font-weight: 500;
     color: var(--headerLight);
     margin-bottom: clamp(2rem, 1.4vw, 2rem);
@@ -471,7 +472,7 @@
     max-width: 33.875rem;
     margin: 0 auto 1.5rem;
     /* Padding L & R - 16px - 32px */
-    padding: 1rem clamp(1rem, 3.2vw, 1rem) 0;
+    padding: 1rem clamp(2rem, 3.2vw, 2rem) 0;
     /* 32px - 40px */
     padding-bottom: clamp(1rem, 5.4vw, 1rem);
     box-shadow: 5px 5px 20px 5px rgba(22, 22, 24, 0.1);
