--- a/src/css/pricing.css
+++ b/src/css/pricing.css
@@ -85,7 +85,7 @@
       line-height: 1.2em;
       text-align: left;
       max-width: 50rem;
-      margin: 0 auto .8rem;
+      margin: 0 auto .5rem;
       color: var(--headerColor);
       position: relative;
     }
